--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,1 @@
-appdirs==1.4.3
-arrow==0.10.0
-beautifulsoup4==4.6.0
-disqus==0.0.4
-dj-database-url==0.5.0
-dj-static==0.0.6
-Django==1.11.4
-django-debug-toolbar==1.9.1
-django-disqus==0.5
-django-emoticons==1.2
-django-forms-bootstrap==3.1.0
-django-paypal==0.3.6
-django-registration==2.2
-django-tinymce==2.7.0
-django-toolbelt==0.0.1
-djangorestframework==3.6.3
-funcsigs==1.0.2
-gunicorn==19.7.1
-mock==2.0.0
-olefile==0.45.1
-pbr==3.1.1
-Pillow==4.1.1
-psycopg2==2.7.5
-python-dateutil==2.6.0
-pytz==2017.2
-requests==2.14.2
-six==1.10.0
-sqlparse==0.2.4
-static3==0.7.0
-stripe==1.55.2
-whitenoise==3.2
+-r requirements/staging.txt
